[project]
name = "astral"
version = "3.3"
description = "Calculations for the sun and moon."
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
dependencies = ["tzdata>=2024.1; sys_platform == 'win32'"]
requires-python = ">=3.10"
readme = "ReadMe.md"
license = { text = "Apache-2.0" }

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/sffjunkie/astral"
Issues = "https://github.com/sffjunkie/astral/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "freezegun>=1.4.0",
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "types-freezegun>=1.1.10",
    "tox>=4.14.1",
    "ruff>=0.3.2",
]
docs = ["sphinx-book-theme>=1.1.2"]

[tool.pdm.scripts]
test = "pytest"
typecheck = "mypy ./src/astral/"

[tool.pytest.ini_options]
markers = ["unit", "integration"]
pythonpath = ["src"]
junit_family = "xunit2"
norecursedirs = [
    ".direnv",
    ".venv",
    ".git",
    ".tox",
    ".cache",
    ".settings",
    "dist",
    "build",
    "docs",
]
