[metadata]
name = astral
version = 2.1
description = Calculations for the position of the sun and moon.
description-file = README.rst
keywords = sun, moon, sunrise, sunset, dawn, dusk

author = Simon Kennedy
author-email = sffjunkie+code@gmail.com

home-page = https://github.com/sffjunkie/astral
license = Apache-2.0
classifiers=
	Intended Audience :: Developers
	Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

project_urls =
    Documentation = https://astral.readthedocs.io/en/stable/index.html
    Source = https://github.com/sffjunkie/astral
    Issues = https://github.com/sffjunkie/astral/issues

[options]
zip_safe = True
package_dir=
    =src
packages = astral
python_requires = >=3.6
install_requires =
    pytz
    dataclasses;python_version=="3.6"
tests_require =
    freezegun
    pytest==5.0.1
    tox
